--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: shopping-cart-web-app
-        image: saif1920/nodejs-shopping-cart-web-app:latest
+        image: saif1920/nodejs-shopping-cart-web-app
         ports:
         - containerPort: 3000
