--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
    "dependencies": {
       "cors": "^2.8.5",
       "ejs": "^3.1.5",
-      "express": "^4.17.1"
+      "express": "^4.17.1",
+      "prom-client": "^14.0.0"
    },
    "engines": {
       "node": "v14.15.3"
